# EngCode

./: .gitignore  build.gradle  local.properties  readme.md
app/: CMakeLists.txt  build.gradle
app/debug/: app-debug.apk  output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mediatek/fmradio/: FmAlexTaoActivity.java  FmRadioNative.java  FmRadioService.java  FmRadioStation.java  FmRadioUtils.java  FmRecorder.java
app/src/main/java/com/newmobi/iic/: IICHelper.java  LEDHelper.java  TestSign.java
app/src/main/java/com/zte/engineer/: AeonAutoTest.java  EmGpio.java  (+90 more)
app/src/main/jni/: Android.mk
app/src/main/jni/GPIO/: CMakeLists.txt  Meta_GPIO_Para.h  funk.h  gpio_jni.c  gpio_jni.h  meta_gpio.c  meta_gpio.h
app/src/main/jni/IIC/: Android.mk  CMakeLists.txt  NewMobiIICTest.c  NewMobiIICTest.cpp
app/src/main/jni/LED/: CMakeLists.txt  LedHelper.cpp  LedHelper.h
app/src/main/jni/Sensors/: Android.mk  CMakeLists.txt  com_zte_engineer_AlspsCali.cpp  com_zte_engineer_LcdPowerControl.cpp  gSensorCaliJni.cpp  libhwm.h
app/src/main/jni/Sensors/log/: log.h  logd.h  uio.h
app/src/main/jni/Sensors/utils/: Log.h
app/src/main/jni/Serial/: Android.mk  CMakeLists.txt  Serial.cpp
app/src/main/jni/SerialPort/: AlexTaoSerialPort.cpp  Android.mk  CMakeLists.txt  SerialPort.cpp
app/src/main/jni/TestSign/: CMakeLists.txt  TestSign.cpp  TestSign.h
app/src/main/res/layout/: activity_alex_back_camera_test.xml  activity_alex_front_camera.xml  activity_alex_tao_gpio.xml  activity_alex_wi_fi_test.xml  activity_commit_report.xml  aeon_tp_test.xml  alextao_boardcode.xml  alextao_fm_test.xml  alextao_gps_test.xml  alextao_iic_test.xml  alextao_serial_port_test.xml  battery_info.xml  board_info.xml  bt_test.xml  buttonview.xml  calibration_layout.xml  camera_test.xml  checkmark_list.xml  ethernet_test.xml  flash_test.xml  fm_rx_em.xml  fm_test.xml  gps_test.xml  gsensortest.xml  gyroscope_sensortest.xml  halltest.xml  key_test.xml  l_sensortest.xml  layout_simtest.xml  lcd_test_view.xml  led_test.xml  list_text.xml  m_sensortest.xml  main.xml  mg_test.xml  netlock.xml  newtest.xml  normal.xml  produce_info.xml  produce_info_view.xml  (+17 more)
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
(+17 files in other folders)
